Fix all deployment workflows to use echo instead of heredoc for JSON creation

--- a/.github/workflows/deploy-debug.yml
+++ b/.github/workflows/deploy-debug.yml
@@ -231,17 +231,15 @@ jobs:
             
             # Create deployment info file
             echo "📝 Creating deployment info..."
-            cat > deployment.json << DEPLOYEOF
-            {
-                "deployed_at": "$(date -u +"%Y-%m-%dT%H:%M:%SZ")",
-                "commit_hash": "$(git rev-parse HEAD)",
-                "commit_short": "$(git rev-parse --short HEAD)",
-                "branch": "$(git rev-parse --abbrev-ref HEAD)",
-                "tag": "$(git describe --tags --exact-match 2>/dev/null || echo 'none')",
-                "deployed_by": "GitHub Actions",
-                "environment": "debug"
-            }
-            DEPLOYEOF
+            echo '{' > deployment.json
+            echo "  \"deployed_at\": \"$(date -u +"%Y-%m-%dT%H:%M:%SZ")\"," >> deployment.json
+            echo "  \"commit_hash\": \"$(git rev-parse HEAD)\"," >> deployment.json
+            echo "  \"commit_short\": \"$(git rev-parse --short HEAD)\"," >> deployment.json
+            echo "  \"branch\": \"$(git rev-parse --abbrev-ref HEAD)\"," >> deployment.json
+            echo "  \"tag\": \"$(git describe --tags --exact-match 2>/dev/null || echo 'none')\"," >> deployment.json
+            echo "  \"deployed_by\": \"GitHub Actions\"," >> deployment.json
+            echo "  \"environment\": \"debug\"" >> deployment.json
+            echo '}' >> deployment.json
             
             # Set proper permissions before Laravel operations
             echo "🔐 Setting proper permissions for Laravel operations..."
