--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME=Rewire
+APP_ENV=production
+APP_KEY=base64:xyD/uFPaoRq52DA1qWOwu9NCuQiViqTzIU7IsafkChI=
+APP_DEBUG=false
+APP_URL=https://rewire.web.id
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=rewire
+DB_USERNAME=zachranraze
+DB_PASSWORD=Nuansautama@15
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
