--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -174,26 +174,7 @@ jobs:
           name: release
           path: .
 
-      - name: Check if .env.production changed
-        id: env-changed
-        run: |
-          # Check if we can do a proper diff (not first push or force push)
-          if git rev-parse --verify ${{ github.event.before }} >/dev/null 2>&1; then
-            if git diff --name-only ${{ github.event.before }}..${{ github.sha }} | grep -q "^\.env\.production$"; then
-              echo "changed=true" >> $GITHUB_OUTPUT
-              echo "📝 .env.production file has changes, will upload to server"
-            else
-              echo "changed=false" >> $GITHUB_OUTPUT
-              echo "ℹ️ No changes in .env.production, skipping upload"
-            fi
-          else
-            # First push or force push - upload .env file to be safe
-            echo "changed=true" >> $GITHUB_OUTPUT
-            echo "⚠️ Cannot determine .env changes (first push?), uploading .env file"
-          fi
-
-      - name: Copy .env.production file (if changed)
-        if: steps.env-changed.outputs.changed == 'true'
+      - name: Copy .env.production file
         run: |
           cp .env.production .env
 
@@ -201,8 +182,7 @@ jobs:
         run: |
           scp -P ${{ secrets.SSH_PORT }} release.tar.gz ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/${{ env.APP_NAME }}/
 
-      - name: Upload .env file to shared directory (if changed)
-        if: steps.env-changed.outputs.changed == 'true'
+      - name: Upload .env file to shared directory
         run: |
           scp -P ${{ secrets.SSH_PORT }} .env ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/${{ env.APP_NAME }}/shared/.env
 
