--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME="Rewire Testing"
 APP_ENV=testing
-APP_KEY=base64:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+APP_KEY=base64:eZM2hE9QyV2EEwN2bGRxuIvQkmcSo9gsblez5fMjnV0=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
