--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Test & Quality Checks
+name: tests
 
 on:
   push:
@@ -9,88 +9,46 @@ on:
     branches:
       - develop
       - main
-      - deploy
 
 jobs:
-  test-and-lint:
-    name: 🧪 Test & Lint
+  ci:
     runs-on: ubuntu-latest
     environment: Testing
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_DATABASE: laravel_test
-          MYSQL_ROOT_PASSWORD: secret
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=5s
-          --health-timeout=2s
-          --health-retries=2
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.4'
-          extensions: mbstring, dom, fileinfo, mysql, zip, gd, intl, redis, imagick
-          coverage: xdebug
+          php-version: 8.4
           tools: composer:v2
+          coverage: xdebug
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '22'
           cache: 'npm'
 
-      - name: Copy .env.testing
-        run: cp .env.testing .env
+      - name: Install Node Dependencies
+        run: npm i
 
-      - name: Get Composer cache directory
-        id: composer-cache
-        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
-
-      - name: Cache Composer dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            vendor
-            ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
-
-      - name: Add Flux Credentials
+      - name: Add Flux Credentials Loaded From ENV
         run: composer config http-basic.composer.fluxui.dev "${{ secrets.FLUX_USERNAME }}" "${{ secrets.FLUX_LICENSE_KEY }}"
 
-      - name: Install Composer dependencies
-        run: composer install --prefer-dist --no-progress
+      - name: Install Dependencies
+        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+
+      - name: Copy Environment File
+        run: cp .env.example .env
 
       - name: Generate Application Key
         run: php artisan key:generate
 
-      - name: Install NPM dependencies
-        run: npm ci
-
-      - name: Build assets
+      - name: Build Assets
         run: npm run build
 
-      - name: Run code quality checks
-        run: vendor/bin/pint
-
-      - name: Run tests (with Pest)
-        env:
-          DB_CONNECTION: mysql
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_DATABASE: laravel_test
-          DB_USERNAME: root
-          DB_PASSWORD: secret
-          REDIS_HOST: 127.0.0.1
-          REDIS_PORT: 6379
-          SESSION_DRIVER: array
+      - name: Run Tests
         run: ./vendor/bin/pest
